added the delete and complete functions

--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -1,4 +1,4 @@
-.todoform {
+.todoForm {
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
@@ -34,4 +34,8 @@
   color: #fff;
   cursor: pointer;
   font-size: 24px;
+}
+
+.modernButton:hover {
+  background-color: rgb(108, 164, 24);
 }
